# trust-openai-agents

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
air_openai_agents_trust/: __init__.py  audit_ledger.py  config.py  consent_gate.py  data_vault.py  errors.py  hooks.py  injection_detector.py
tests/: conftest.py  test_audit_ledger.py  test_consent_gate.py  test_data_vault.py  test_hooks.py  test_injection_detector.py
