[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-openai-agents-trust"
version = "0.1.0"
description = "AIR Trust Layer for OpenAI Agents SDK — audit trails, data tokenization, consent gates, and injection detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "AIR Blackbox", email = "hello@airblackbox.com"},
]
keywords = ["openai", "agents", "ai-safety", "audit", "trust", "security", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/airblackbox/trust-openai-agents"
Repository = "https://github.com/airblackbox/trust-openai-agents"
Issues = "https://github.com/airblackbox/trust-openai-agents/issues"
Documentation = "https://airblackbox.com/docs"

[tool.setuptools.packages.find]
include = ["air_openai_agents_trust*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
